# layla

./: README.md  dependencies.rosinstall
layla_descartes_moveit/: CMakeLists.txt  package.xml
layla_descartes_moveit/include/: const_ee_speed_time_parameterization.h  layla_descartes_moveit_planner.h  time_optimal_trajectory_generation.h
layla_descartes_moveit/launch/: layla_descartes_moveit_planner.launch  layla_moveit_setup.launch
layla_descartes_moveit/src/: layla_descartes_moveit_main.cpp
layla_descartes_moveit/src/task/: const_ee_speed_time_parameterization.cpp  generate_trajectory.cpp  get_course.cpp  init_ros.cpp  (+4 more)
layla_descartes_tesseract/: CMakeLists.txt  package.xml
layla_descartes_tesseract/include/: layla_descartes_tesseract_planner.h
layla_descartes_tesseract/launch/: layla_descartes_tesseract_planner.launch
layla_descartes_tesseract/src/: descartes_problem_construction.cpp  layla_descartes_tesseract_main.cpp  run_descartes.cpp
layla_motion_planner/: CMakeLists.txt  package.xml
layla_msgs/: CMakeLists.txt  package.xml
layla_ompl_moveit/: CMakeLists.txt  package.xml
layla_ompl_moveit/include/: layla_ompl_moveit_planner.h
layla_ompl_moveit/launch/: layla_moveit_setup.launch  layla_ompl_moveit_planner.launch
layla_ompl_moveit/src/: const_ee_speed_time_parameterization.cpp  layla_ompl_moveit_main.cpp  ompl_planner_construction.cpp
layla_trajopt_tesseract/: CMakeLists.txt  package.xml
layla_trajopt_tesseract/include/: const_ee_speed_time_parameterization.h  layla_trajopt_planner.h
layla_trajopt_tesseract/launch/: layla_tesseract_setup.launch  layla_trajopt_planner.launch
layla_trajopt_tesseract/src/: const_ee_speed_time_parameterization.cpp  layla_trajopt_main.cpp  problem_construction.cpp  run_trajopt.cpp
layla_utilities/: CMakeLists.txt  package.xml
layla_utilities/include/: course_display_topic.h  ee_cartesian_pose_publisher.h  ee_request_publisher.h  ee_state_publisher.h  joint_request_publisher.h  pose_builder_server.h
layla_utilities/launch/: layla_motion_planning_pipeline.launch  path_creation.launch
layla_utilities/src/: course_display.cpp  ee_cartesian_pose_publisher.cpp  ee_request_publisher.cpp  ee_state_publisher.cpp  joint_request_publisher.cpp  pose_builder.cpp  pose_builder.py
(+13 files in other folders)
